--- a/src/styles.css
+++ b/src/styles.css
@@ -1,31 +1,50 @@
-
 * {
   box-sizing: border-box;
 }
-
 body {
-background-color: #343c4b;
-min-height: 100vh;
+  background-color: mediumaquamarine;
+}
+
+.AppLogo {
+max-width: 15vh;
 display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-font-size: calc(10px + 2vmin);
-color: white;
-}
-
-.header{
-background-color: aqua;
-}
-.App-logo {
-
-position: relative;
-   height: 20vmin;
-  pointer-events: none;
-padding-top: 1rem;
+margin: auto;
+padding-top: 3rem;
+padding-bottom: 5rem;
 }
 
 
 
+body, input[type=text] {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+  display: flex;
+  justify-content: center;
+  margin: auto
+}
+
+button {
+color: #fff !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #ed3330;
+padding: 20px;
+border-radius: 5px;
+display: inline-block;
+border: none;
+transition: all 0.4s ease 0s;
+}
+
+button:hover {
+background: #434343;
+letter-spacing: 1px;
+-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+transition: all 0.4s ease 0s;
+}
+
+.productsLeft {
+text-align: center;
+}
 
 
