--- a/src/styles.css
+++ b/src/styles.css
@@ -5,29 +5,51 @@ body {
   background-color: mediumaquamarine;
 }
 
+
+
 .AppLogo {
 max-width: 15vh;
 display: flex;
 margin: auto;
 padding-top: 3rem;
-padding-bottom: 5rem;
+padding-bottom: 1rem;
 }
 
+.pizarra{
+  background-color: #777777;
+  color: white;
+  font-size: small;
+  overflow-y: scroll;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  text-decoration: underline ;
+}
 
-
-body, input[type=text] {
+body{
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
   display: flex;
   justify-content: center;
-  margin: auto
+  margin: auto;
+  font-size: 1.5rem;
+  margin: 1rem
 }
 
+.inputMenu{
+  display: flex;
+  font-size: 1.3rem;
+  justify-content: center;
+  margin: auto;
+  margin-bottom: 2rem;
+  padding-bottom: 1rem;
+  width: 80%;
+  border-radius: 5px;
+}
 button {
 color: #fff !important;
 text-transform: uppercase;
 text-decoration: none;
-background: #ed3330;
-padding: 20px;
+background: #576ef0;
+padding: 15px;
 border-radius: 5px;
 display: inline-block;
 border: none;
@@ -43,8 +65,28 @@ box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
 transition: all 0.4s ease 0s;
 }
 
+@media (max-width: 432px) {
+  .addProduct {
+    align-items: center;
+    margin: 0.5rem;
+  }
+  .deleteProducts{
+    margin:0.5rem;
+align-items: center;
+  }
+}
+
+.addProduct {
+margin-right: 2rem
+}
+
 .productsLeft {
+  margin-top: 2rem;
 text-align: center;
+font-size: 1.5rem
 }
 
 
+.producto {
+background-color: coral;
+}
