--- a/src/styles.css
+++ b/src/styles.css
@@ -3,26 +3,33 @@
 }
 body {
   background-color: mediumaquamarine;
+  margin: 0;
+  padding: 0;
+list-style: none;
 }
 
-
+h1 {
+font-size: 2rem;
+text-align: center;
+margin-bottom: 0;
+}
 
 .AppLogo {
 max-width: 15vh;
 display: flex;
 margin: auto;
-padding-top: 3rem;
+padding-top: 1rem;
 padding-bottom: 1rem;
 }
 
 .pizarra{
   background-color: #777777;
   color: white;
-  font-size: small;
-  overflow-y: scroll;
   border-radius: 10px;
   font-size: 1.2rem;
-  text-decoration: underline ;
+  margin: auto;
+
+
 }
 
 body{
@@ -39,6 +46,7 @@ body{
   font-size: 1.3rem;
   justify-content: center;
   margin: auto;
+  margin-top: 1rem;
   margin-bottom: 2rem;
   padding-bottom: 1rem;
   width: 80%;
